# winsparkle

./: .bzrignore  .gitattributes  .gitignore  .gitmodules  AUTHORS  COPYING  LICENSE.md  Makefile.mingw32  Makefile.mingw64  NEWS  README  README.md  WinSparkle-2010.sln  WinSparkle-2010.vcxproj  WinSparkle-2010.vcxproj.filters  WinSparkle-2012.sln  WinSparkle-2012.vcxproj  WinSparkle-2012.vcxproj.filters  WinSparkle-2013.sln  WinSparkle-2013.vcxproj  WinSparkle-2013.vcxproj.filters  WinSparkle-2015.sln  WinSparkle-2015.vcxproj  WinSparkle-2015.vcxproj.filters  WinSparkle-2017.sln  WinSparkle-2017.vcxproj  WinSparkle-2019.sln  WinSparkle-2019.vcxproj  WinSparkle.Targets  WinSparkle.Toolset.props  WinSparkle.WinRT.props  WinSparkle.bkl  WinSparkle.sln  WinSparkle.vcproj  WinSparkle.vcxproj  WinSparkle.vcxproj.filters  WinSparkleDotNet-2013.csproj  WinSparkleDotNet.csproj  WinSparkle_de_DE.mo  WinSparkle_de_DE.po  (+11 more)
.github/workflows/: build-docs.yml  build.yml  check-translations.yml
.nuget/: packages.config
Wrappers/FreePascal-Lazarous/: winsparkle.pas  winsparkle_lazarus.lpk
artwork/: README
cmake/: CMakeLists.txt  README.txt  WinSparkleConfig.cmake.in  common.rc
cmake/crypto/: CMakeLists.txt
cmake/expat/: CMakeLists.txt
cmake/qt-example/: CMakeLists.txt
cmake/wxWidgets/: CMakeLists.txt  PCHSupport.cmake
docs/: astro.config.mjs  lychee.toml  package.json  pnpm-lock.yaml
docs/src/: content.config.ts
docs/src/components/: ApiClass.astro  ApiConstant.astro  ApiFunction.astro  ApiMarker.astro  ApiType.astro  Deprecated.astro  Since.astro
docs/src/content/: AGENTS.md
docs/src/plugins/: clean-heading-slugs.mjs
docs/src/styles/: custom.css
examples/: example_dotnet-2013.csproj  example_dotnet.csproj  example_psdk-2010.vcxproj  example_psdk-2010.vcxproj.filters  example_psdk-2012.vcxproj  example_psdk-2013.vcxproj  example_psdk-2015.vcxproj  example_psdk-2017.vcxproj  example_psdk-2019.vcxproj  example_psdk.vcproj  example_psdk.vcxproj  example_psdk.vcxproj.filters  examples-2010.sln  examples-2012.sln  examples-2013.sln  examples-2015.sln  examples-2017.sln  examples.bkl  examples.sln
examples/example_dotnet/: Program.cs  WinSparkleDemoForm.Designer.cs  WinSparkleDemoForm.cs  WinSparkleDemoForm.resx
examples/example_dotnet/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
examples/psdk/: app_psdk.aps  app_psdk.c  app_psdk.manifest  app_psdk.rc  dsa_pub.pem  example_psdk.vcproj  example_psdk.vcxproj  example_psdk.vcxproj.filters  winui_logo.ico.readme.txt
examples/qt/: QtExampleApp.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
include/: stringids.h  winsparkle-version.h  winsparkle.h
nuget/: WinSparkle.nuspec  WinSparkle.props  WinSparkle.targets
pascal/: winsparkle.pas
src/: appcast.cpp  appcast.h  appcontroller.cpp  appcontroller.h  dll_api.cpp  dllmain.cpp  download.cpp  download.h  error.cpp  error.h  errorcodes.cpp  errorcodes.h  ghostupdater.cpp  ghostupdater.h  hostpoller.cpp  hostpoller.h  msix.cpp  msix.h  resources.cpp  resources.h  settings.cpp  settings.h  signatureverifier.cpp  signatureverifier.h  threads.cpp  threads.h  ui.cpp  ui.h  updatechecker.cpp  updatechecker.h  updatedownloader.cpp  updatedownloader.h  updater.cpp  updater.h  utils.h  winsparkle-resources.h  winsparkle-version.h  winsparkle.h  winsparkle.rc  winsparkletypes.h
src/AppcastTestHost/: AppcastModule.cs  AppcastTestHost.csproj  Program.cs  packages.config
src/AppcastTestHost/Properties/: AssemblyInfo.cs
src/AppcastTestHost/xml/: appcast.xml
src/WinSparkleDotNet/: .gitignore  WinSparkle.cs  WinSparkleAttribute.cs  WinSparkleDotNet.csproj  WinSparkleNet.cs
src/WinSparkleDotNet/Properties/: AssemblyInfo.cs
src/WinSparkleDotNetExample/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WinSparkleDotNetExample.csproj
src/WinSparkleDotNetExample/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/WinSparkleDotNetExampleInstaller/: Product.wxs  WinSparkleDotNetExampleInstaller.wixproj
tests/: packages.config  pch.cpp  pch.h  test.cpp  winsparkle-tests.props  winsparkle-tests.vcxproj
tools/: tools.bkl  winsparkle-tool.cpp  winsparkle-tool.vcxproj  winsparkle-tool.vcxproj.filters
translations/: README  af.po  ar.po  be.po  bg.po  bs.po  ca_ES.po  co.po  crowdin.yaml  cs.po  da.po  de.po  el.po  es.po  et.po  eu.po  fi.po  fr.po  fy_NL.po  ga.po  gl_ES.po  he.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lt_LT.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ru.po  (+13 more)
wrappers/Delphi/src/: Project3.dpr  Project3.dproj  Project3.res  Unit4.fmx  Unit4.pas  WinSparkle.pas
wrappers/FreePascal-Lazarous/: winsparkle_lazarus.pas
wxWidgets/: regen
wxWidgets/demos/bombs/: game.h
wxWidgets/demos/forty/: game.h  pile.h  scorefil.cpp
wxWidgets/demos/fractal/: fractal.cpp
wxWidgets/demos/life/: game.h  life.h  reader.cpp  reader.h  samples.inc
wxWidgets/distrib/scripts/: update-manifests.sh
wxWidgets/docs/doxygen/: Doxyfile_chm  Doxyfile_docset  Doxyfile_xml
wxWidgets/docs/tech/: tn0011.txt  tn0016.txt  tn0021.txt
wxWidgets/include/wx/: anidecod.h  arrimpl.cpp  checkbox.h  event.h  filefn.h  gbsizer.h  glcanvas.h  iconbndl.h  imaglist.h  init.h  intl.h  ipcbase.h  log.h  menuitem.h  mousestate.h  msgdlg.h  notebook.h  pen.h  position.h  slider.h  socket.h  sstream.h  stdstream.h  stockitem.h  textwrapper.h  wfstream.h  window.h  xti.h
wxWidgets/interface/wx/: bmpbuttn.h  buffer.h  chartype.h  checkbox.h  choice.h  clntdata.h  colour.h  dateevt.h  debug.h  debugrpt.h  dirctrl.h  docview.h  editlbox.h  event.h  filename.h  filesys.h  fs_mem.h  gdicmn.h  gdiobj.h  grid.h  ipcbase.h  link.h  listbox.h  menu.h  mimetype.h  mstream.h  palette.h  persist.h  pickerbase.h  popupwin.h  power.h  progdlg.h  radiobox.h  regex.h  sashwin.h  scrolbar.h  settings.h  sizer.h  srchctrl.h  statbox.h  (+12 more)
wxWidgets/lib/: abicheck.sh
wxWidgets/locale/: it.po
wxWidgets/misc/scripts/: inc_release
wxWidgets/samples/access/: accesstest.cpp
(+757 files in other folders)
